# GlobaLeaks

./: .gitignore  .readthedocs.yaml  AUTHORS  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZATION_GUIDE.md  GOVERNANCE.md  LICENSE  README.md  fragebogen.json  hinweisgeberschutz.css  publiccode.yml
backend/: pyproject.toml  requirements.txt
backend/globaleaks/: __init__.py  anomaly.py  backend.py  event.py  orm.py  sessions.py  settings.py  state.py
backend/globaleaks/db/: __init__.py  appdata.py  migration.py
backend/globaleaks/handlers/: base.py  file.py  health.py  l10n.py  operation.py  public.py  redirect.py  report.py  robots.py  security.py  signup.py  sitemap.py  staticfile.py  support.py  viewer.py  wizard.py
backend/globaleaks/jobs/: anomalies.py  cache_reset.py  certificate_check.py  cleaning.py  delivery.py  exit_nodes_refresh.py  job.py  notification.py  periodic_daily.py  periodic_hourly.py  periodic_minutely.py  pgp_check.py  session_management.py  update_check.py
backend/globaleaks/mocks/: twisted_mocks.py
backend/globaleaks/models/: __init__.py  config.py  config_desc.py  enums.py  profiles.py  properties.py  (+1 more)
backend/requirements/: requirements-bionic.txt  requirements-bookworm.txt  requirements-bullseye.txt  requirements-buster.txt  requirements-focal.txt  requirements-jammy.txt  requirements-noble.txt  requirements-trixie.txt  requirements.txt.bionic  requirements.txt.bookworm  requirements.txt.bullseye  requirements.txt.buster  requirements.txt.focal  requirements.txt.jammy  requirements.txt.noble  requirements.txt.trixie
(+934 files in other folders)
